[gd_scene load_steps=2 format=3 uid="uid://db5n7ddifpp1f"]

[ext_resource type="Script" path="res://oscillator_settings.gd" id="1_04fdp"]

[node name="OscillatorSettings" type="PanelContainer"]
script = ExtResource("1_04fdp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Wave Type: "

[node name="WaveOptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Sine"
popup/item_0/id = 0
popup/item_1/text = "Square"
popup/item_1/id = 1
popup/item_2/text = "Triangle"
popup/item_2/id = 2
popup/item_3/text = "Sawtooth"
popup/item_3/id = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TransSpinBox" type="SpinBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -12.0
max_value = 12.0
rounded = true
alignment = 1
prefix = "Transpose:"
custom_arrow_step = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Fine: "

[node name="FineHSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -127.0
max_value = 128.0
rounded = true
tick_count = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Level"

[node name="LevelVSlider" type="VSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 127.0
value = 63.0

[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/WaveOptionButton" to="." method="_on_any_setting_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/TransSpinBox" to="." method="_on_any_setting_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/FineHSlider" to="." method="_on_any_setting_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/LevelVSlider" to="." method="_on_any_setting_changed"]
